RESOLVED FIXED149866
Format string issues in LegacyRequest.cpp
https://bugs.webkit.org/show_bug.cgi?id=149866
Summary Format string issues in LegacyRequest.cpp
Michael Catanzaro
Reported 2015-10-06 19:38:40 PDT
Probably need to static_cast<int>(m_readyState) [1669/5846] Building CXX object Source...s/indexeddb/legacy/LegacyRequest.cpp.o In file included from ../../Source/WTF/wtf/StdLibExtras.h:32:0, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/WebCore/config.h:75, from ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp:29: ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp: In member function ‘virtual bool WebCore::LegacyRequest::dispatchEvent(WTF::PassRefPtr<WebCore::Event>)’: ../../Source/WTF/wtf/Assertions.h:278:110: warning: format ‘%d’ expects argument of type ‘int’, but argument 7 has type ‘WebCore::IDBRequestReadyState’ [-Wformat=] WTFReportAssertionFailureWithMessage(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, #assertion, __VA_ARGS__); \ ^ ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp:478:5: note: in expansion of macro ‘ASSERT_WITH_MESSAGE’ ASSERT_WITH_MESSAGE(m_readyState < IDBRequestReadyState::Done, "When dispatching event %s, m_readyState < DONE(%d), was %d", event->type().string().utf8().data(), IDBRequestReadyState::Done, m_readyState); ^ ../../Source/WTF/wtf/Assertions.h:278:110: warning: format ‘%d’ expects argument of type ‘int’, but argument 8 has type ‘WebCore::IDBRequestReadyState’ [-Wformat=] WTFReportAssertionFailureWithMessage(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, #assertion, __VA_ARGS__); \ ^ ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp:478:5: note: in expansion of macro ‘ASSERT_WITH_MESSAGE’ ASSERT_WITH_MESSAGE(m_readyState < IDBRequestReadyState::Done, "When dispatching event %s, m_readyState < DONE(%d), was %d", event->type().string().utf8().data(), IDBRequestReadyState::Done, m_readyState); ^ ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp: In member function ‘void WebCore::LegacyRequest::enqueueEvent(WTF::PassRefPtr<WebCore::Event>)’: ../../Source/WTF/wtf/Assertions.h:278:110: warning: format ‘%d’ expects argument of type ‘int’, but argument 7 has type ‘WebCore::IDBRequestReadyState’ [-Wformat=] WTFReportAssertionFailureWithMessage(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, #assertion, __VA_ARGS__); \ ^ ../../Source/WebCore/Modules/indexeddb/legacy/LegacyRequest.cpp:575:5: note: in expansion of macro ‘ASSERT_WITH_MESSAGE’ ASSERT_WITH_MESSAGE(m_readyState == IDBRequestReadyState::Pending || m_didFireUpgradeNeededEvent, "When queueing event %s, m_readyState was %d", event->type().string().utf8().data(), m_readyState); ^
Attachments
Patch (2.47 KB, patch)
2015-10-06 21:19 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2015-10-06 21:19:25 PDT
WebKit Commit Bot
Comment 2 2015-10-08 08:28:24 PDT
Comment on attachment 262576 [details] Patch Clearing flags on attachment: 262576 Committed r190725: <http://trac.webkit.org/changeset/190725>
WebKit Commit Bot
Comment 3 2015-10-08 08:28:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.