Format string issues in LegacyRequest.cpp https://bugs.webkit.org/show_bug.cgi?id=149866

Reviewed by Csaba Osztrogonác.

Cast enums to ints before printing them to placate GCC's -Wformat.

* Modules/indexeddb/legacy/LegacyRequest.cpp:
(WebCore::LegacyRequest::dispatchEvent):
(WebCore::LegacyRequest::enqueueEvent):


Canonical link: https://commits.webkit.org/168063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190725 268f45cc-cd09-0410-ab3c-d52691b4dbfc